# CSCD577_Assignment_4

./: README.md  README.txt
CarotidFlow/src/: CMakeLists.txt  CarotidFlow.cxx
CarotidFlowLocal/src/: CarotidFlowLocal.cxx
CarotidFlowLocalZ/src/: CMakeLists.txt  CarotidFlowLocal.cxx
CartoidFlow_Problem_3_1/src/: CarotidFlowLocal.cxx
CartoidFlow_Problem_3_2/src/: CarotidFlowLocal.cxx
